# agent-audit

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  RELEASE_NOTES.md  USAGE.md  pyproject.toml
.github/workflows/: tests.yml
docs/brand/: README.md
examples/: audit_session.py
fixtures/agent_session/: actions.jsonl  intents.jsonl  policy.json
project-docs/: public-boundary.md
scripts/: check_public_surface.py
src/agent_audit/: __init__.py  auditor.py  cli.py  io.py  models.py
src/warden_agent_audit/: __init__.py  cli.py  io.py  models.py
tests/: test_auditor.py  test_cli.py  test_public_surface.py
