[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-audit"
version = "0.1.1"
description = "Audit an AI-agent session -- declared intent + action ledger vs. a scope policy; flags drift, scope violations, and unbacked prior-work claims."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Zain Dana Harper" }]
keywords = ["ai-safety", "agent-ops", "audit", "provenance", "guardrails"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
